# mycv4_libs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
inc/: channel_adjust.hpp  disp.hpp  drawing.hpp
src/: channel_adjust.cpp  disp.cpp  drawing.cpp  main.cpp
